Update backend json data path